<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey"
    tools:context=".MenuBotones">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="52dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="354dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="351dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <TextView
        android:id="@+id/textView3"
        style="@style/MaterialAlertDialog.Material3.Title.Icon"
        android:layout_width="148dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif"
        android:shadowColor="@color/purple_700"
        android:text="@string/titulo_menu"
        android:textColor="@color/light_blue"
        android:textColorLink="@color/purple_700"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_servicios"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/btn_servicios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/btn_servicios"
        android:textColorLink="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/btn_agendarServicio"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:rippleColor="@color/light_blue" />

    <Button
        android:id="@+id/btn_agendarServicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/btn_agendarServicio"
        android:textColorLink="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/btn_miAgenda"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:rippleColor="@color/light_blue" />

    <Button
        android:id="@+id/btn_miAgenda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/btn_miAgenda"
        android:textColorLink="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:rippleColor="@color/light_blue" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/btn_volver"
        android:textColor="@color/teal_200"
        android:textColorLink="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_miAgenda"
        app:rippleColor="@color/light_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>