<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey"
    tools:context=".RegistroUsuario">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="52dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="354dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="351dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <TextView
        android:id="@+id/textView3"
        style="@style/MaterialAlertDialog.Material3.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:fontFamily="sans-serif-smallcaps"
        android:shadowColor="@color/purple_700"
        android:text="@string/titulo_registro"
        android:textColor="@color/light_blue"
        android:textColorLink="@color/purple_700"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/til_user"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/til_pass"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:passwordToggleEnabled="false"
        app:startIconTint="@color/light_blue">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@color/light_blue"
            android:hint="@string/user" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/til_pass_repeat"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass_repeat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/til_correo"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passRepeat"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_logue"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/btn_crear"
        android:textColorLink="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:rippleColor="@color/light_blue" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/btn_volver"
        android:textColor="@color/teal_200"
        android:textColorLink="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:rippleColor="@color/light_blue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_correo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/btn_logue"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:startIconTint="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>